FFmpegfs NEWS

* FFmpegfs has been added to Debian 11 Bullseye and Ubuntu 20.04 and Debian 10
  Buster Backports. See INSTALL.md "Installation from repository" for details.
* Cool, there's an online review on Linux Uprising, you can read it here:
  https://www.linuxuprising.com/2020/03/ffmpegfs-is-fuse-based-filesystem-for.html

Important changes in 2.10 (2022-04-XX):

* Feature: Issue #120: Added subtitle support. Subtitle streams can now also be
  transcoded to the output files. Separate SRT or VTT files will be incorporated
  as subtitle streams.
* Bugfix: Fixed memory leak in encode_audio_frame().
* Bugfix: Issue #122: Last song was missing from cuesheet files.
* Bugfix: Issue #129: Files remained zero size when previously transcoded.
* Bugfix: Issue #130: Fix file sizes can be incorrectly reported by ls but are
  correct when data is read.
* Bugfix: Duration was not saved in cache SQLite database.
* Bugfix: Issue #131: Sometimes video parameters for some Bluray or DVD chapters cannot be
  detected by FFmpeg API. Transcode then failes - fixed by using data from the
  Bluray directory or DVD IFO instead.
* Lowest supported FFmpeg API version raised to 4.1.8 "al-Khwarizmi".
* Dropped libavresample support, library was removed from FFmpeg API after 3.4.9.
* Deprecated previous channel layout API based on uint64 bitmasks.
* Deprecated swr_alloc_set_opts() and swr_build_matrix().

Important changes in 2.9 (2022-02-16):

* Feature: Issue #97: Added options to chose different codecs. The audio codec
  can be selected with --audiocodec, for videos use --videocodec.
* Feature: Issue #109: Allow user defined file extensions for source files. By
  default, only standard extensions are accepted, i.e., mp4, ts, avi etc.
  Arbitrary file extensions can be defined now, e.g. using
  --extensions=xxx,abc,yxz,aaa to also convert files ending with .xxx, .abc and
  so on.
* Feature: Issue #121: Added MKV support. New format can be selected with
  --desttype=mkv.